tests/neg-custom-args/captures/i23431.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i23431.scala:8:13 ----------------------------------------
8 |      myIO = io  // error, level mismatch
  |             ^^
  |             Found:    (io : IO^)
  |             Required: IO^{any}
  |
  |             Note that capability `io` is not included in capture set {any}
  |             because (io : IO^) in method setIO is not visible from any in variable myIO.
  |
  |             where:    ^   refers to a root capability in the type of parameter io
  |                       any is a root capability in the type of variable myIO
  |
  | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i23431.scala:11:13 ---------------------------------------
11 |      myIO = io2  // error, level mismatch
   |             ^^^
   |             Found:    (io2 : IO^)
   |             Required: IO^{any}
   |
   |             Note that capability `io2` is not included in capture set {any}
   |             because (io2 : IO^) in an enclosing function is not visible from any in variable myIO.
   |
   |             where:    ^   refers to a root capability in the type of parameter io2
   |                       any is a root capability in the type of variable myIO
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i23431.scala:13:13 ---------------------------------------
13 |      myIO = io3  // error, level mismatch
   |             ^^^
   |Found:    (io3 : IO^)
   |Required: IO^{any}
   |
   |Note that capability `io3` is not included in capture set {any}
   |because (io3 : IO^) in an enclosing function is not visible from any in variable myIO.
   |
   |where:    ^   refers to a root capability created in anonymous function of type (io3²: IO^²): Unit of parameter parameter io3 of method $anonfun
   |          any is a root capability in the type of variable myIO
   |
   | longer explanation available when compiling with `-explain`
-- Error: tests/neg-custom-args/captures/i23431.scala:6:14 -------------------------------------------------------------
6 |    var myIO: IO^ = io1  // error: separation
  |              ^^^
  |              Separation failure: variable myIO's type IO^ hides parameter io1.
  |              The parameter needs to be annotated with consume to allow this.
